# supportdesk

./: .gitignore  Dockerfile  README.md  docker_entrypoint.py
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: classify.py  config.py  database.py  draft.py  events.py  main.py  models.py  pipeline.py  search.py  security.py  sse.py
backend/app/routers/: events.py  kb.py  pipeline.py  tickets.py  webhook.py
backend/kb_documents/: billing_faq.txt  feature_overview.txt  getting_started.txt  terms_of_service.txt  troubleshooting.txt
backend/migrations/: 001_initial_schema.sql  002_demo_tickets.sql  003_pipeline_runs_error.sql  004_fix_kb_document_names.sql  005_fix_stale_sources_used.sql  run_migrations.py
backend/scripts/: ingest_kb.py
backend/tests/: conftest.py  test_classify.py  test_draft.py  test_kb_router.py  test_models.py  test_pipeline.py  test_search.py  test_security.py  test_tickets_router.py  test_webhook_endpoint.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js
frontend/src/pages/: About.jsx  Dashboard.jsx  KB.jsx  Submit.jsx  TicketDetail.jsx
